-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
New Installation - Lustre 2.4.3 servers, 1.8.9 Clients
-
3
-
15111
This problem was reported against a newly installed system at NOAA (Boulder). The system was idle at the time:
Jul 17 04:53:57 lfs-mds-0-1 kernel: : LNet: Service thread pid 29363 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).
Jul 17 05:26:52 lfs-mds-0-1 kernel: : LNet: Service thread pid 29363 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).
Jul 20 04:10:08 lfs-mds-0-1 kernel: : LDISKFS-fs (dm-9): mounted filesystem with ordered data mode. quota=off. Opts:
Jul 21 01:20:12 lfs-mds-0-1 kernel: : LNet: Service thread pid 13603 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).
Jul 21 14:35:12 lfs-mds-0-1 kernel: : LNet: Service thread pid 13829 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).
Jul 23 05:55:12 lfs-mds-0-1 kernel: : LNet: Service thread pid 29363 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).
Jul 24 11:19:47 lfs-mds-0-1 kernel: : LNet: Service thread pid 13672 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).
Customer stats that he is observing LNet: Service thread pid completed after 0.00s even when the system is idle (they are on testbed (pre-production)).
I also saw these same messages on another idle system that was newly installed (Harvard (HMU)).